<resources>
    <string name="app_name">My Bitcoin App</string>
    <string name="stocks">Stocks</string>
    <string name="home">Home</string>
    <string name="crypto">Crypto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_crypto_currency">Search Crypto Currency</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="search_stocks">Search Stocks</string>
    <string name="search_ticker">Search Ticker</string>
    <string name="search">Search</string>
    <string name="enter_ticker">Enter Ticker</string>
    <string name="about_company">About Company</string>
    <string name="company_info">Company Info</string>
    <string name="company_name">Company Name</string>
    <string name="sector">Sector</string>
    <string name="sector_info">Sector Info</string>
    <string name="statistics">Statistics</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="openinfo">openInfo</string>
    <string name="open_info">Open Info</string>
    <string name="close_info">Close Info</string>
    <string name="_52_week_high">52 Week High</string>
    <string name="_52_week_low">52 Week Low</string>
    <string name="week_low_info">week low info</string>
    <string name="market_cap_info">Market Cap Info</string>
    <string name="margin_cap">Margin Cap</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="article_image">Article Image</string>
    <string name="publisher">Publisher</string>
    <string name="search_news_article">Search News Article</string>
    <string name="volume">Volume</string>
    <string name="news_articles">News Articles</string>
</resources>