<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/buttonLinearLayout">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLinearLayout"
        android:fillViewport="true"
        android:id="@+id/stockScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginTop="2dp"
                android:padding="3dp"
                android:text="@string/symbol"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:text="@string/company_name"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:text="@string/statistics"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/weekHigh"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:text="@string/_52_week_high"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/weekLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:text="@string/_52_week_low"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/weekHighInfo"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/weekLowInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/marginCap"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:text="@string/margin_cap"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:text="@string/volume"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/marketCapInfo"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/volumeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="3dp"
                    android:textColor="@color/white" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:text="@string/news_articles"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cryptoNewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:padding="3dp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cryptoInfoProgressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>