<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/black_shade_2"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cryptoSymbol"
            android:layout_margin="2dp"
            android:padding="3dp"
            android:text="@string/symbol"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/cryptoPrice"/>

        <TextView
            android:id="@+id/cryptoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cryptoSymbol"
            android:text="@string/name"
            android:textColor="@color/white"
            android:padding="3dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/cryptoPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/price"
            android:textColor="@color/white"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:padding="3dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>